--- a/FormularioCarpinteria/FormDatosEmpleado.resx
+++ b/FormularioCarpinteria/FormDatosEmpleado.resx
@@ -117,15 +117,6 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <metadata name="gbPedido.Locked" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>True</value>
-  </metadata>
-  <metadata name="dgvDatosEmpleado.Locked" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>True</value>
-  </metadata>
-  <metadata name="dgvDatosEmpleado.Locked" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>True</value>
-  </metadata>
   <metadata name="Column1.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
   </metadata>
@@ -153,91 +144,64 @@
   <metadata name="Column9.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
   </metadata>
-  <metadata name="gbMadera.Locked" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>True</value>
-  </metadata>
-  <metadata name="dgvTablaMadera.Locked" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>True</value>
-  </metadata>
-  <metadata name="dgvTablaMadera.Locked" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>True</value>
-  </metadata>
-  <metadata name="CodMPrima.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>True</value>
-  </metadata>
-  <metadata name="NombreMPrima.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>True</value>
-  </metadata>
-  <metadata name="cantMPrima.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>True</value>
-  </metadata>
-  <metadata name="TipogMPrima.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>True</value>
-  </metadata>
-  <metadata name="tamMPrima.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>True</value>
-  </metadata>
-  <metadata name="DimAMPrima.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>True</value>
-  </metadata>
-  <metadata name="DimBMPrima.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>True</value>
-  </metadata>
-  <metadata name="DimCMPrima.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>True</value>
-  </metadata>
-  <metadata name="MedidaMPrima.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>True</value>
-  </metadata>
-  <metadata name="fechaIngresMPrima.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>True</value>
-  </metadata>
-  <metadata name="CUMPrima.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>True</value>
-  </metadata>
-  <metadata name="CTMPrima.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>True</value>
-  </metadata>
-  <metadata name="EstMPrima.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>True</value>
-  </metadata>
-  <metadata name="gbInsumos.Locked" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>True</value>
-  </metadata>
-  <metadata name="dgvDatosInsumos.Locked" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>True</value>
-  </metadata>
-  <metadata name="dgvDatosInsumos.Locked" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>True</value>
-  </metadata>
-  <metadata name="Codigo.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>True</value>
-  </metadata>
-  <metadata name="Categoria.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>True</value>
-  </metadata>
-  <metadata name="Producto.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>True</value>
-  </metadata>
-  <metadata name="cantidad.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>True</value>
-  </metadata>
-  <metadata name="FechaEmision.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>True</value>
-  </metadata>
-  <metadata name="CUnitario.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>True</value>
-  </metadata>
-  <metadata name="FechaVencimiento.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>True</value>
-  </metadata>
-  <metadata name="CTotal.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>True</value>
-  </metadata>
-  <metadata name="EstInsumo.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>True</value>
-  </metadata>
-  <metadata name="$this.Locked" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>True</value>
-  </metadata>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="pictureBox1.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAEAAAABACAYAAACqaXHeAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAAAboAAAG6AeirAQYAAAAZdEVYdFNvZnR3YXJlAHd3dy5pbmtzY2FwZS5vcmeb7jwa
+        AAAMI0lEQVR4Xu2bCVSU1xWAZRmGRRjZQWSTRQERXBBEZUcUxRXRuAEVFRcQdxv3pTGojcuJrVGTqNEm
+        tbaN2lgTgxqtR5tUY2zNiZo0zTmNJm2znTYxbVNv733D++f/f+7AzDCansZ7zpcw77/vvnvv/P97971/
+        7AAA32nYxgcBSghS2Ewop/MgYBvvByj9kC3IK8hHCDWq+Rh5FdmK5HM27gdso7NBcUXuIuqA2+IoksjZ
+        cyZso7NAcaX/f3Ghblhx/+i7QZ28IDM1HGrGpMK2Jflw6qlyePnHY6GxIQcmDOkOidH+4Orqok7CvxC6
+        I/z1tp0F29heUNyRyy4uLn++dmTqoS8v1YOtfHy6FhZV9gU3bSKuIyZurPbCNrYXlEDkPwhc2D+BDbQt
+        zj0zHrrFBKiTQPODgRuvPbCN7eWr1xdEntlb8Y9fPDGCDc5WPj0/B2ZXpKmT8Aw3XntgGx0FpRp5+9n1
+        JZe5gBwlPyNSnYSF3NiOwjY6AkpH5AtysnZcGhuIo7zzYjX4+njIBPwF8eB8cAS20RFQ6podhOM7RrGB
+        tIedjxbKBBAVnA+OwDbaC4oLcpOc6x4bwAbgDGgJpTGQVzk/HIFttBcUqvKEc9txfeecdwZLqjJkAu4h
+        cZwv9sI22gvKpGbHANd91nln8ELjMJkA4gPkTeRFZCUSxvnWFmyjvaCsQkTx8vlv5rLOO4MbR6vVCdDz
+        CTKK86812EZ7QdlPTsR09mMddybB/l4i4EBfDyhODYHoIG+ZAOIrxK79A9toLyi/JgcyUsJYp51J7/hA
+        EWxOUhD8accQwe6aXuBuKZ2PcT5aw/wfrN31F+wB5SQC3p7ukJoQdP+IDwIvDzcRqI/RHZIifBV8jOZ2
+        5DPOR2uQ0O37DfIWQjuv4Ygfp2wNlJ8g0oFvG4rFZv9JaEnRG/k3chHZgBQgnlxnCUo3ZB9yFRE2Yrom
+        QHxC91bx9DQ/zz5eRhiZl2GVIdm9pF8EjUEzP8cvkWmcj9YgEYaDcFLxcHdVD6SGDjOakEeRLMTNirFa
+        RPSprVsCC5ets0rD4tXgYTQK3UeGDAS4fMQqd17ZK/0garmxHYVEGG4YGg/v/LAYnpudAbOKukJalAlc
+        XTR7cjVU8x9DGpBUxKXZmM0JGDt+qmLvcCPub5jAJQ8sAXJWlVxrLBQzbFVONCSEdVQ7oYc2KC8gR2Sb
+        tQSUjRoPCYlJ4O3tI/SMHgb4+/mDmoB3r6iFMQWZcPvlPd9uAvS8sSEfxmVFqJ2xCpeAtF5KKatQXtRf
+        EzwREWI+CNmzctaDS0Dfrv7wxJSe8NqqHDb4i+vyYHhvZTMiSI7wg9Vjk2BEn3AI9jM/z5LauYs1wY8q
+        n6Rc8/Y0wjgMfGVNOXx98fkWCTi+7fuwYHIZfHZ2v/j84cndatvTuUAchURtXEATYknPUJhREAtzB8fB
+        oO5BmjO6jrjerxqTBO9tK9Ekad24ZEVnUuVMTQKSe6SLdrrl5a1tK027Vit2kQIuEEchURtvE7oLXsdH
+        QR245FeLsxW90hHlmgRExXQV7X2TcRPHBNkaj9dNVuwiQVYCiUOWIguQUk6Hg0QYriuJEwGsLU+GMgwy
+        KtBblJe0EoR38oSx/SLgpSXZbOBLyxKhJj8GNk5IkU5C7779NQnILSgR7S5o78SO5Wyg1hhbmCXt3mEC
+        cEOeRsQhrIrDCJssNSSiAzcJ/nF7Cby7VXub6zm6qL96UAWjpyfUL1ypJKCmdj62Wx6j0IBOkJWaCL87
+        uIkNWvLlhUNCt7nfWSaAHc3XON5HxLsJa5AIZVtWAY63txRDaXoYGA0ti6iC4mGau6B8QiX4dPTV6KyZ
+        WcEGLmmYOFyjj9xBDiHTkAzknwjuE6Lg/NMb4G+nn9X3yeECl5AIRWsJOL1ikJjcDs3NgOubi1kdgu6U
+        owv7i1WBHhmyaTB4QOW0uZokVE+vE48BXacJ8erzW9jACQpI96bIKkurRsFHp/aKft+8cRhCAkzy2pNc
+        4BISoWgtAT0i/aQhsRLQ0jdlUBRsm9oTzq/OZfv8fH6Wsj319w+EWUpNsBZi4xIVezuX4YqmC1rywUu7
+        ID4yTBl3Ky7RP6hIgWG9wiDAckLcgpS4SKifUAoJUcqS3eKxUUMiFK0loH5IXGslMcwsjFV0399u6UcT
+        o9Tx9ukobn85ERI0sXGBE1QJ+vmYN0rE8lHdFbtynJPLBohlWuq0wl+Rx5AixMvuBBB/2FQEB2b1FcnI
+        TgwE7+Y9OZGBBRTpUNlMpzNp0SZRH5CTcwablz6CbntXV/M8ERsRAp+/dkAT9Cdn9sHJJ1fA4CzNmyCY
+        hquL3h/i+uYiSAy3lOd0PhAT7C1wcbH010HzxVmEjvAGIbSCmC/SLdsntpMI8qf1/eDW1sHswMS7GOAx
+        nP03TewBF9fmibZTjw4UdmhH+dbjhYruzup0TcKIQJMv5PZJhinDcqGiOBu6RoRqrhPUZ0dlmmJHDy3V
+        UpeOxq6qxqQvYz9+YbOKzZs63YtWNSeQDhdUDQp08kIV4NIRiSJYWhLVDnAcntdPUytcWJMrHhFfL/cW
+        9tsiBEtr+jLOrGxZmj+mqjfykoM1jx4HJWTP9N7WNnUdjEgZQqdB1xDugARM3gZRHtOK0LR8EDuQ5Lfr
+        82E4TlbWMm/w8BDzgsR8MMLr0vxTnhkhbJJtevblkhtm8oQrGwtajN8WVN4rYzCTQjBSgTyF3EIsyipC
+        TUYYndEZtkxKVR4DgjLt72NQ9Oi5j46Jg6KS4fC9GfOwOFqhWRYl85esgZm4gZowuQayBuRBaBjd4pak
+        0B05G2/pLgHmyZGSe3hepiYwW6H5TtptkQA9KFFIFfIc8iFi6awiFief3KQgTVtwSChMqZ7NBmwLWdm5
+        Gntq6NHUB0YrD9UgA3CipseHJu7fNxa10LMrAXpQ6PxvNkKHH/QywmKsGfrWM9F5OvbiArMVqh/c3FrO
+        H3Q3XFpvueskNOHpdekR6t7ZFyYNjBTb/XOrc9qXADUo9FK0F0K/3hAGqfDRb4XVLFi6VlSDpWXl0Ccj
+        W0B/Uxtd0+unpFoORMm2/JsKMn1lehYnzInZkWJ5bGUpVL9D4AOzBxR/5FMyRt9WVY229FUzqXIGBARq
+        HxM1dI101H0qp81RrmdkDhTzifxckBLc4kxCQjP/vto+YsLLSghQ3ie0gAvKHlA2S2OD8oo1zksWLF0D
+        mf1z8FvRbphMJpNA3UY6pEt9ZP+ILlHiWmhYZ6hbsBxCQi01AFWDXAL0yNqFDnJSVeU9G5StoEQjX5Oh
+        8M6RGqfV5OQPVgb08vKCxsZGuHnzJty7d09Af1MbXZN61Ef2T+/dr7ndBWbPWybOG02d/EUb3c70XHNB
+        W8OZc8AB4YS7Aapn1GuCllRPr8fr5oksKSkJbty4gV15oWukY7bpLvqSjbzCoYrDE6eaHxEaz83NfFtT
+        ncAFag2nJACFfv1Jb2NxokrXBK0mKtq8HzAYDHDlyhXs2rqQDulSH+pLNkarDlTpcFXaTu+dKdqoJuAq
+        Rms4KwEJ0sjIMY8oTqlpWLwKl0Tzt9TQ0IDdbBPSpT7Ul2zQnSDHGjx0pGKfCid5d9Haf3BOhni5wwWt
+        xlkJGE0GaNJSH32pmVw1Uxno+PHj2M02IV3Zj2yQffk5J88yNxAJ3Swn0QRtxjLjA2B+aTz8rCGTPdJz
+        VgLEr0I6+vppHFJTPKRMGej27dvYzTYhXdmPbMxbtEr5rF9pSkpHK9c4aFdJvyVYNqKbsqlzVgLo1BXC
+        wrtoHFJDzsqB7t69i91sE9KV/ZJ7pInXaerP9MhJ1ElGqDqlTR296mc3dX5eBoho3k8IcDyHQKHX5xAT
+        G88GTzgjAXayF7tL/+gfZIxHdiPvIXpdM7KDvaBcIgP/Ywmw+vMYlBiETpLpxxzyH2ycYJVtAeWBJKC+
+        Wzd4c+jQVskMVPYI57A7668elK6IO3vRFlAeSAI2pqcDTJzYKiXhSml8Cbuz/lqDbbQFGowGfZiAhwl4
+        mAA2eOJhAh4m4GECpGP/lwn4EQ1qMBq3N6xZ04nDFBAwTugYDLeampqi7YH6UN+UsLCqpjlzolsjwNt7
+        F+mST5yvrcE22gIKvVjsi7T1Cwz6IaVdvz0mqA/15a7pQaHDGfKF/QVra7CN3x2gw38BkAsCokI0HpUA
+        AAAASUVORK5CYII=
+</value>
+  </data>
 </root>
