--- a/FormularioCarpinteria/FormDatosMPrima.resx
+++ b/FormularioCarpinteria/FormDatosMPrima.resx
@@ -117,51 +117,6 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <metadata name="gbPedido.Locked" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>True</value>
-  </metadata>
-  <metadata name="dgvDatosEmpleado.Locked" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>True</value>
-  </metadata>
-  <metadata name="dgvDatosEmpleado.Locked" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>True</value>
-  </metadata>
-  <metadata name="Column1.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>True</value>
-  </metadata>
-  <metadata name="Column2.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>True</value>
-  </metadata>
-  <metadata name="Column3.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>True</value>
-  </metadata>
-  <metadata name="Column4.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>True</value>
-  </metadata>
-  <metadata name="Column5.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>True</value>
-  </metadata>
-  <metadata name="Column6.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>True</value>
-  </metadata>
-  <metadata name="Column7.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>True</value>
-  </metadata>
-  <metadata name="Column8.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>True</value>
-  </metadata>
-  <metadata name="Column9.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>True</value>
-  </metadata>
-  <metadata name="gbMadera.Locked" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>True</value>
-  </metadata>
-  <metadata name="dgvTablaMadera.Locked" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>True</value>
-  </metadata>
-  <metadata name="dgvTablaMadera.Locked" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>True</value>
-  </metadata>
   <metadata name="CodMPrima.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
   </metadata>
@@ -201,43 +156,67 @@
   <metadata name="EstMPrima.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
   </metadata>
-  <metadata name="gbInsumos.Locked" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>True</value>
-  </metadata>
-  <metadata name="dgvDatosInsumos.Locked" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>True</value>
-  </metadata>
-  <metadata name="dgvDatosInsumos.Locked" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>True</value>
-  </metadata>
-  <metadata name="Codigo.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>True</value>
-  </metadata>
-  <metadata name="Categoria.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>True</value>
-  </metadata>
-  <metadata name="Producto.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>True</value>
-  </metadata>
-  <metadata name="cantidad.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>True</value>
-  </metadata>
-  <metadata name="FechaEmision.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>True</value>
-  </metadata>
-  <metadata name="CUnitario.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>True</value>
-  </metadata>
-  <metadata name="FechaVencimiento.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>True</value>
-  </metadata>
-  <metadata name="CTotal.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>True</value>
-  </metadata>
-  <metadata name="EstInsumo.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>True</value>
-  </metadata>
-  <metadata name="$this.Locked" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>True</value>
-  </metadata>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="pictureBox1.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAEAAAABACAYAAACqaXHeAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAAAdcAAAHXAYySCGgAAAAZdEVYdFNvZnR3YXJlAHd3dy5pbmtzY2FwZS5vcmeb7jwa
+        AAAM5UlEQVR4Xu2aeVBX1xXHkX3fF0FAQbaAIiKICiiCiGBYZRMQAQGjxn1PMG5pNNq4xLhGcY2aqGii
+        jTFJJ83WNWmStmmS/tW0/3SbNplOZppmwun5nh/39b0fT1k0JJn5nZnPwO++++6757x7zz3n3mdnE5vY
+        xCY2sYlNbGKTeydujN8g8GT04sRY10Hb30mZzJxh/srQIPk6Nixo6atbWqJPLK+Kd7Af9heTOuBvDJ6V
+        wXzrgjdympHOuTg7U0xEOMWOjCBPdzdDx8P8vCk2NPC2jI0MpcNtFfRyR5swKyXecD1meABF+PuQs6OD
+        arOb6WRcmW9FXJjXGQoNCqCdKxfR+5dP0cfXLwi/vXqWDnasppjIcOlwzPBAurZ2vqbgYLm8sp4W5aVR
+        gKe7MsRrjDMz5HKAoXHxMfTz809rilsDo+RmTJDORgX709T7ooXcMTF0oKXMVMm+uLGuiY633E+jg/2U
+        EfYyQyrxzFd+3l7db587alC4dHo2OTk60tQJKXTr6F7NCNHhYaqzGi3T000V7A9XV8ylo02zycvVmYZx
+        X7i9WGbI5FGG1jTVGZQHi2sryNvDMjw93Nzo5WP7pHzv+uVSljwylA4uKKej7XPololi/eXmxhZ6dvEc
+        mjtpjDLoNmbI5G2GXnl6v6b4Ry+c1/7/Pf/fXlUqHcPwR9n7V06zk3QiPw82ipUyG8qmU3xYkMHp3Ym4
+        0CBaOTubnnuwivbXFygDvMUMmXzq4GAvikI5DPu4UREGI3z4/DPk5uoiq4EqiwwdjuFKL25cYDBAcVqi
+        UqLfFIyLoyvLaujiogriJRNlf2SGTP5gP2wY/e7qOVFsXHysdOrGod2asu8+1ym+wN/HWysLDQokR3t7
+        uvVwq8EAmApdaxoHBO67vLSGzj9QTsO4L/z8T6RnQySvMNS1f4cotra5TgwAQ1zdv5NeOrJH8/y1hTOk
+        DlYKB1Ye8YBe+cHTSs8tqaQdVbnyHOYWM2SygqH5pYWi3IfXzlH6mPtURzSiRoTRLy+ekDoPtTVKWVn6
+        GBNlLMzNTDGd84nhIbS7Ybah7o/WN4kTnDV2tHreMmbIJIiH3ec8xLvVKIARNrY20sSxiZR6XzwtqZ2j
+        BUavdR4gXjJlBMD76xXRA0fIbfcCfmNxwRRDXcx/vH1H9kXcl8+4XhAzpLKYoWB/v+6ufY+JomZgpYiJ
+        GCGKVE1KNihhzUvsG8zmu3UE+cLqBtpRmUt+7q7KSAuZb0X2MPwWHKiuKJ8u7t5G7106RR9cOSO+AEsh
+        VgLUyU6IopsPGb3/QHl+XTPtrJ1J+UnRMprQLvME841KNIPA5x3m74x68HeVfzLvMzuZGOauJIJBmCmN
+        4236eHlaP5C8udyfA5zeuJKPm2UE6EFsAJ9gXY4hHeLtMSiCmSAvD3JzdtTa6wmRdzAOzMDlzbNHmqsL
+        cr9a1VgrjkzN659y/N/R3kSBfr7yoNgQf9peNpUeq8gxsLkki1IigqWOp7s7rZhXbWgHS+OWxQtoeKC/
+        1ElkJ3huYZl497thz9x8KhkfS+4ceaJdposZkBGcPr5xsYo72a06awYMoYKgqEBfmhgVppE2KpRie7K1
+        kWHDtZzAjF+wIdQyGh8aQDMSo25L6fh46lxQbKq4nlNtJbSlLJtCfDyUEfqdK0RiWWmdU/yldUcbSwpp
+        RHAQ8aignz1zTMrwl1cC9ZBeuLm4aFmhor2ylMKCA6k8bxq9deawlCFeQNtmbVizrmiKqdLWHJ1fRJtL
+        s8nVyRHT4Uu+dyTTp3QwtLyh2tBpMCc/hxAC4zqUVqnwtiWtUhYd5EstWeOoOTOZksICpQzKWrdTf3+B
+        5sURKr9+6qCU71q1RMrihgdQR0m2Kdt5aiH+N1PYmnMLy+nJ+plUmKwFS5uZPuVNRsJZ646Dd57tpLK8
+        qdIg/qIMbw/JkR87Pcz9rTz0RgX4SJ3nDzzeqw3w60snqWZWntSZlTVJyrCEujg5kY+7i6lCg+GphgLq
+        KM5SBuhXxvgnrOsq08Own5aWYug8IjwkOgH6RCcwQEbHD8qn0ZbSLPHoSFKwNYbrGAmTkpMMGSOSKXdX
+        V0GVIXzmPtDZdqMzbJgyliaNDu8Xk2PCacPsTLnvcGMhp8wz1Yj7s2jYh3wK5VRHE6JGSodeO/mU1kkz
+        A8CTmxngN11n5HpKgsVZ3jzyhHYPjIOlVW+AUSNCJfTF8NUbAMsc7u8vcJhigPlsgLp8NkD/U2aZAspx
+        tVWWSIM56ani9X/Fw70s12oKXDhO9mzhO02BpfWV8ntKylhxfEiXq28zBWA8vfLgVGuJxP794fHqPLrQ
+        4ycsUyBTnsO8wfQp4gTRYdWp0T2xPFBOMCTAX3OCWMtRhrdUMCaaZiZFUYS/JdCBAVEH4bEaTfp2MIqU
+        E8TOMspyEkb2MsBgQEwBJ6jLGB9m+pSRWDI4Wut+9bhlywsOq7lstuzoYKmC81I7wTBCUE9AZAaWQeVQ
+        MXVgEAxzLINYVd4+e0SuIRZAGYb/tvIcU4UGCpbBR3g6uliWwf9wfyKZfgmWC3nzPz7xpHTQDHQ+Oc5i
+        3URe9srGx2mUpsTS+J4oMDI0hAMhYyygB8ackBgvdafGR5oqM1AQCCEGQJiMdplNTL8FYeNFhrw83Lsl
+        FNY5QSiODQ6s4agzKtCHtvLD9GEw2MzLT2JYgNRB/I9ppTcofMqmB5q1QCohNJDOtJWaKjQQflg7g+5P
+        iSE3fvNol7nA9DsUDmHWMy8zqgEBSnh79vbGd0qGfE2SIQ83LjdJqqyToUh2pLtrZohSWBZhIP11PZZk
+        yF2iPut2GegCnYKZ24o9s5HBXDFrZMhxd3Hu3ttY/O9XOlr/dW3t/M8CPN2/NqvXX3r8AAwBXQ2C4YFh
+        Qq78UM4DZEMDe/ngyt7HqKm0SA4/UQde2iwcRdn2imnk72k5GIXTRJiM6YNtcji6w5vWUub4ZLmOgGtH
+        XaHp5se94vqGJto3r4iKU+LI5f8Hq+cYw5TYzoizul0IDG4c3K0lLDiRsTbAIQ46wvwsy1/J9CwtCDJj
+        +9J2iR3cOGVtykmjBbkTBwX2CrvW9H3oen1NI+2tm6nPDrW8ADs+X2HZs05ZsaWVlpRAcIIqpH3x8BMS
+        vTlx7H+osUhTHmtuWWqcNI43jDeu2sGbRxmCqWNb1mvl61saVGfuCpwSmSltTdfyubSvvkCMztPhv3yv
+        ZIe7pJF5NVrHFJPHaeduNCYmWoIZlC+qKZeyirQEzQDHmmeL40OAYz2KsDEKB6raWlZfJeUwkgqyKicl
+        04qi7AGDY7XrG5pNFbbm5sZm6WvNxCTVF2yb2X2AHz85aYnG9CAfwLDHVjfqQHGUI0zGb6StygBbyyzh
+        MbbErdsB8CVHHlkr3h+JCXwMymF43Nc+I6NXhy+tmicHqQr97vDFFfWGa3fiUGuFtiF76cEqOsgJEp7J
+        vMfYfY6lTXUUw946h4dxcAO+/sBvGAbTAG9bLUPePcudOglCfpCVmkyd2x8ytKWGvQq1YRT8xvmgUg68
+        yB32dLU4XUWIr5dcw1a5EztQ/bW+wFmi3MvTAC/Mw0W2y3CeYPeFdVbnwI2rQw2ABAiZHZykKvNy177Q
+        MNBQXCDXz+/aIr/zJ6dr9wA4P5TD0Ph9fOsG+V08wWgAUJc1XvugAizpORzBWSJOmPTX7sS0xGja1XOy
+        1LW8VgzQ88K+YOw+wZvEG0OHinMsmwfYtcFpD3J2lbVV5k+XOsjm8Dvc31v258Cqggwpy54wTuogieIo
+        khx56VGjAMuhyvdVGTZX8ftuPpYYCJeXVtMJ7i9yDn7uR4zdYXTg0WXt0qE3Th/SojQ4LnzkgP8xSlTi
+        smmhpdOIvtRmZWZshJQhnVX7hTtXWLI7gB1ktQ1W2JP+AqwyKFtfOp1KeBoUpSYMGIyGzkXVpgrreYmn
+        Fd5+W06q6tdBxm4i0x0WFChDHZ3C1jWGrisHPq6czRVkZmgpK5a0O2V/ACNGKXjkkXXy7QBGGWJ+bI1j
+        ZOHaUw+vlvqRgb5Ukq555kExb2qqqdJ6rq2ql9EaYAnU8JVZGiOCyEiWPez5qc5bg70/tX2dET2CVvKw
+        17NgWgp5sXPEdTg7szYUOEZTfuTx+iIJZjZX5VPHnLwBs72mgG5saDFVWoHT5JOtpZQ0Qtt5xud9muAr
+        zXcZcXR71i3T1nyAJWz36iUUHmJJb2OC/em0SdaGjxVW5KdrIWdeRpqE0XrFMZKwyjj3JC0tud/83L+6
+        eh4tn5khqxWeyeCYz4MxiBdziZFK2MjAN35Y+jAVVDkI4+UoOsjPlKggX/J0MdaH/0iMHiUGxGqiyvG1
+        iNn3APcK+biSM0pdDgCQ5lt/lmuQHAaJ0T8Y/Y3fZ3Coe56ZygxI3BnrD5a/b0AHm9jEJjaxiU1sYhOb
+        GMXO7n9m75Wxa+fEQAAAAABJRU5ErkJggg==
+</value>
+  </data>
 </root>
