Corregi errores en consultas

--- a/FormularioCarpinteria/FormDatosMPrima.resx
+++ b/FormularioCarpinteria/FormDatosMPrima.resx
@@ -159,64 +159,64 @@
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
   <data name="pictureBox1.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAAEAAAABACAYAAACqaXHeAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAAAdcAAAHXAYySCGgAAAAZdEVYdFNvZnR3YXJlAHd3dy5pbmtzY2FwZS5vcmeb7jwa
-        AAAM5UlEQVR4Xu2aeVBX1xXHkX3fF0FAQbaAIiKICiiCiGBYZRMQAQGjxn1PMG5pNNq4xLhGcY2aqGii
-        jTFJJ83WNWmStmmS/tW0/3SbNplOZppmwun5nh/39b0fT1k0JJn5nZnPwO++++6757x7zz3n3mdnE5vY
-        xCY2sYlNbGKTeydujN8g8GT04sRY10Hb30mZzJxh/srQIPk6Nixo6atbWqJPLK+Kd7Af9heTOuBvDJ6V
-        wXzrgjdympHOuTg7U0xEOMWOjCBPdzdDx8P8vCk2NPC2jI0MpcNtFfRyR5swKyXecD1meABF+PuQs6OD
-        arOb6WRcmW9FXJjXGQoNCqCdKxfR+5dP0cfXLwi/vXqWDnasppjIcOlwzPBAurZ2vqbgYLm8sp4W5aVR
-        gKe7MsRrjDMz5HKAoXHxMfTz809rilsDo+RmTJDORgX709T7ooXcMTF0oKXMVMm+uLGuiY633E+jg/2U
-        EfYyQyrxzFd+3l7db587alC4dHo2OTk60tQJKXTr6F7NCNHhYaqzGi3T000V7A9XV8ylo02zycvVmYZx
-        X7i9WGbI5FGG1jTVGZQHi2sryNvDMjw93Nzo5WP7pHzv+uVSljwylA4uKKej7XPololi/eXmxhZ6dvEc
-        mjtpjDLoNmbI5G2GXnl6v6b4Ry+c1/7/Pf/fXlUqHcPwR9n7V06zk3QiPw82ipUyG8qmU3xYkMHp3Ym4
-        0CBaOTubnnuwivbXFygDvMUMmXzq4GAvikI5DPu4UREGI3z4/DPk5uoiq4EqiwwdjuFKL25cYDBAcVqi
-        UqLfFIyLoyvLaujiogriJRNlf2SGTP5gP2wY/e7qOVFsXHysdOrGod2asu8+1ym+wN/HWysLDQokR3t7
-        uvVwq8EAmApdaxoHBO67vLSGzj9QTsO4L/z8T6RnQySvMNS1f4cotra5TgwAQ1zdv5NeOrJH8/y1hTOk
-        DlYKB1Ye8YBe+cHTSs8tqaQdVbnyHOYWM2SygqH5pYWi3IfXzlH6mPtURzSiRoTRLy+ekDoPtTVKWVn6
-        GBNlLMzNTDGd84nhIbS7Ybah7o/WN4kTnDV2tHreMmbIJIiH3ec8xLvVKIARNrY20sSxiZR6XzwtqZ2j
-        BUavdR4gXjJlBMD76xXRA0fIbfcCfmNxwRRDXcx/vH1H9kXcl8+4XhAzpLKYoWB/v+6ufY+JomZgpYiJ
-        GCGKVE1KNihhzUvsG8zmu3UE+cLqBtpRmUt+7q7KSAuZb0X2MPwWHKiuKJ8u7t5G7106RR9cOSO+AEsh
-        VgLUyU6IopsPGb3/QHl+XTPtrJ1J+UnRMprQLvME841KNIPA5x3m74x68HeVfzLvMzuZGOauJIJBmCmN
-        4236eHlaP5C8udyfA5zeuJKPm2UE6EFsAJ9gXY4hHeLtMSiCmSAvD3JzdtTa6wmRdzAOzMDlzbNHmqsL
-        cr9a1VgrjkzN659y/N/R3kSBfr7yoNgQf9peNpUeq8gxsLkki1IigqWOp7s7rZhXbWgHS+OWxQtoeKC/
-        1ElkJ3huYZl497thz9x8KhkfS+4ceaJdposZkBGcPr5xsYo72a06awYMoYKgqEBfmhgVppE2KpRie7K1
-        kWHDtZzAjF+wIdQyGh8aQDMSo25L6fh46lxQbKq4nlNtJbSlLJtCfDyUEfqdK0RiWWmdU/yldUcbSwpp
-        RHAQ8aignz1zTMrwl1cC9ZBeuLm4aFmhor2ylMKCA6k8bxq9deawlCFeQNtmbVizrmiKqdLWHJ1fRJtL
-        s8nVyRHT4Uu+dyTTp3QwtLyh2tBpMCc/hxAC4zqUVqnwtiWtUhYd5EstWeOoOTOZksICpQzKWrdTf3+B
-        5sURKr9+6qCU71q1RMrihgdQR0m2Kdt5aiH+N1PYmnMLy+nJ+plUmKwFS5uZPuVNRsJZ646Dd57tpLK8
-        qdIg/qIMbw/JkR87Pcz9rTz0RgX4SJ3nDzzeqw3w60snqWZWntSZlTVJyrCEujg5kY+7i6lCg+GphgLq
-        KM5SBuhXxvgnrOsq08Own5aWYug8IjwkOgH6RCcwQEbHD8qn0ZbSLPHoSFKwNYbrGAmTkpMMGSOSKXdX
-        V0GVIXzmPtDZdqMzbJgyliaNDu8Xk2PCacPsTLnvcGMhp8wz1Yj7s2jYh3wK5VRHE6JGSodeO/mU1kkz
-        A8CTmxngN11n5HpKgsVZ3jzyhHYPjIOlVW+AUSNCJfTF8NUbAMsc7u8vcJhigPlsgLp8NkD/U2aZAspx
-        tVWWSIM56ani9X/Fw70s12oKXDhO9mzhO02BpfWV8ntKylhxfEiXq28zBWA8vfLgVGuJxP794fHqPLrQ
-        4ycsUyBTnsO8wfQp4gTRYdWp0T2xPFBOMCTAX3OCWMtRhrdUMCaaZiZFUYS/JdCBAVEH4bEaTfp2MIqU
-        E8TOMspyEkb2MsBgQEwBJ6jLGB9m+pSRWDI4Wut+9bhlywsOq7lstuzoYKmC81I7wTBCUE9AZAaWQeVQ
-        MXVgEAxzLINYVd4+e0SuIRZAGYb/tvIcU4UGCpbBR3g6uliWwf9wfyKZfgmWC3nzPz7xpHTQDHQ+Oc5i
-        3URe9srGx2mUpsTS+J4oMDI0hAMhYyygB8ackBgvdafGR5oqM1AQCCEGQJiMdplNTL8FYeNFhrw83Lsl
-        FNY5QSiODQ6s4agzKtCHtvLD9GEw2MzLT2JYgNRB/I9ppTcofMqmB5q1QCohNJDOtJWaKjQQflg7g+5P
-        iSE3fvNol7nA9DsUDmHWMy8zqgEBSnh79vbGd0qGfE2SIQ83LjdJqqyToUh2pLtrZohSWBZhIP11PZZk
-        yF2iPut2GegCnYKZ24o9s5HBXDFrZMhxd3Hu3ttY/O9XOlr/dW3t/M8CPN2/NqvXX3r8AAwBXQ2C4YFh
-        Qq78UM4DZEMDe/ngyt7HqKm0SA4/UQde2iwcRdn2imnk72k5GIXTRJiM6YNtcji6w5vWUub4ZLmOgGtH
-        XaHp5se94vqGJto3r4iKU+LI5f8Hq+cYw5TYzoizul0IDG4c3K0lLDiRsTbAIQ46wvwsy1/J9CwtCDJj
-        +9J2iR3cOGVtykmjBbkTBwX2CrvW9H3oen1NI+2tm6nPDrW8ADs+X2HZs05ZsaWVlpRAcIIqpH3x8BMS
-        vTlx7H+osUhTHmtuWWqcNI43jDeu2sGbRxmCqWNb1mvl61saVGfuCpwSmSltTdfyubSvvkCMztPhv3yv
-        ZIe7pJF5NVrHFJPHaeduNCYmWoIZlC+qKZeyirQEzQDHmmeL40OAYz2KsDEKB6raWlZfJeUwkgqyKicl
-        04qi7AGDY7XrG5pNFbbm5sZm6WvNxCTVF2yb2X2AHz85aYnG9CAfwLDHVjfqQHGUI0zGb6StygBbyyzh
-        MbbErdsB8CVHHlkr3h+JCXwMymF43Nc+I6NXhy+tmicHqQr97vDFFfWGa3fiUGuFtiF76cEqOsgJEp7J
-        vMfYfY6lTXUUw946h4dxcAO+/sBvGAbTAG9bLUPePcudOglCfpCVmkyd2x8ytKWGvQq1YRT8xvmgUg68
-        yB32dLU4XUWIr5dcw1a5EztQ/bW+wFmi3MvTAC/Mw0W2y3CeYPeFdVbnwI2rQw2ABAiZHZykKvNy177Q
-        MNBQXCDXz+/aIr/zJ6dr9wA4P5TD0Ph9fOsG+V08wWgAUJc1XvugAizpORzBWSJOmPTX7sS0xGja1XOy
-        1LW8VgzQ88K+YOw+wZvEG0OHinMsmwfYtcFpD3J2lbVV5k+XOsjm8Dvc31v258Cqggwpy54wTuogieIo
-        khx56VGjAMuhyvdVGTZX8ftuPpYYCJeXVtMJ7i9yDn7uR4zdYXTg0WXt0qE3Th/SojQ4LnzkgP8xSlTi
-        smmhpdOIvtRmZWZshJQhnVX7hTtXWLI7gB1ktQ1W2JP+AqwyKFtfOp1KeBoUpSYMGIyGzkXVpgrreYmn
-        Fd5+W06q6tdBxm4i0x0WFChDHZ3C1jWGrisHPq6czRVkZmgpK5a0O2V/ACNGKXjkkXXy7QBGGWJ+bI1j
-        ZOHaUw+vlvqRgb5Ukq555kExb2qqqdJ6rq2ql9EaYAnU8JVZGiOCyEiWPez5qc5bg70/tX2dET2CVvKw
-        17NgWgp5sXPEdTg7szYUOEZTfuTx+iIJZjZX5VPHnLwBs72mgG5saDFVWoHT5JOtpZQ0Qtt5xud9muAr
-        zXcZcXR71i3T1nyAJWz36iUUHmJJb2OC/em0SdaGjxVW5KdrIWdeRpqE0XrFMZKwyjj3JC0tud/83L+6
-        eh4tn5khqxWeyeCYz4MxiBdziZFK2MjAN35Y+jAVVDkI4+UoOsjPlKggX/J0MdaH/0iMHiUGxGqiyvG1
-        iNn3APcK+biSM0pdDgCQ5lt/lmuQHAaJ0T8Y/Y3fZ3Coe56ZygxI3BnrD5a/b0AHm9jEJjaxiU1sYhOb
-        GMXO7n9m75Wxa+fEQAAAAABJRU5ErkJggg==
+        iVBORw0KGgoAAAANSUhEUgAAAEAAAABACAYAAACqaXHeAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAB
+        1wAAAdcBjJIIaAAAABl0RVh0U29mdHdhcmUAd3d3Lmlua3NjYXBlLm9yZ5vuPBoAAAzlSURBVHhe7Zp5
+        UFfXFceRfd8XQUBBtoAiIogKKIKIYFhlExABAaPGfU8wbmk02rjEuEZxjZqoaKKNMUknzdY1aZK2aZL+
+        1bT/dJs2mU5mmmbC6fmeH/f1vR9PWTQkmfmdmc/A77777rvnvHvPPefeZ2cTm9jEJjaxiU1sYpN7J26M
+        3yDwZPTixFjXQdvfSZnMnGH+ytAg+To2LGjpq1taok8sr4p3sB/2F5M64G8MnpXBfOuCN3Kakc65ODtT
+        TEQ4xY6MIE93N0PHw/y8KTY08LaMjQylw20V9HJHmzArJd5wPWZ4AEX4+5Czo4Nqs5vpZFyZb0VcmNcZ
+        Cg0KoJ0rF9H7l0/Rx9cvCL+9epYOdqymmMhw6XDM8EC6tna+puBgubyynhblpVGAp7syxGuMMzPkcoCh
+        cfEx9PPzT2uKWwOj5GZMkM5GBfvT1PuihdwxMXSgpcxUyb64sa6JjrfcT6OD/ZQR9jJDKvHMV37eXt1v
+        nztqULh0ejY5OTrS1AkpdOvoXs0I0eFhqrMaLdPTTRXsD1dXzKWjTbPJy9WZhnFfuL1YZsjkUYbWNNUZ
+        lAeLayvI28MyPD3c3OjlY/ukfO/65VKWPDKUDi4op6Ptc+iWiWL95ebGFnp28RyaO2mMMug2ZsjkbYZe
+        eXq/pvhHL5zX/v89/99eVSodw/BH2ftXTrOTdCI/DzaKlTIbyqZTfFiQwendibjQIFo5O5uee7CK9tcX
+        KAO8xQyZfOrgYC+KQjkM+7hREQYjfPj8M+Tm6iKrgSqLDB2O4UovblxgMEBxWqJSot8UjIujK8tq6OKi
+        CuIlE2V/ZIZM/mA/bBj97uo5UWxcfKx06sah3Zqy7z7XKb7A38dbKwsNCiRHe3u69XCrwQCYCl1rGgcE
+        7ru8tIbOP1BOw7gv/PxPpGdDJK8w1LV/hyi2trlODABDXN2/k146skfz/LWFM6QOVgoHVh7xgF75wdNK
+        zy2ppB1VufIc5hYzZLKCofmlhaLch9fOUfqY+1RHNKJGhNEvL56QOg+1NUpZWfoYE2UszM1MMZ3zieEh
+        tLthtqHuj9Y3iROcNXa0et4yZsgkiIfd5zzEu9UogBE2tjbSxLGJlHpfPC2pnaMFRq91HiBeMmUEwPvr
+        FdEDR8ht9wJ+Y3HBFENdzH+8fUf2RdyXz7heEDOkspihYH+/7q59j4miZmCliIkYIYpUTUo2KGHNS+wb
+        zOa7dQT5wuoG2lGZS37urspIC5lvRfYw/BYcqK4ony7u3kbvXTpFH1w5I74ASyFWAtTJToiimw8Zvf9A
+        eX5dM+2snUn5SdEymtAu8wTzjUo0g8DnHebvjHrwd5V/Mu8zO5kY5q4kgkGYKY3jbfp4eVo/kLy53J8D
+        nN64ko+bZQToQWwAn2BdjiEd4u0xKIKZIC8PcnN21NrrCZF3MA7MwOXNs0eaqwtyv1rVWCuOTM3rn3L8
+        39HeRIF+vvKg2BB/2l42lR6ryDGwuSSLUiKCpY6nuzutmFdtaAdL45bFC2h4oL/USWQneG5hmXj3u2HP
+        3HwqGR9L7hx5ol2mixmQEZw+vnGxijvZrTprBgyhgqCoQF+aGBWmkTYqlGJ7srWRYcO1nMCMX7Ah1DIa
+        HxpAMxKjbkvp+HjqXFBsqrieU20ltKUsm0J8PJQR+p0rRGJZaZ1T/KV1RxtLCmlEcBDxqKCfPXNMyvCX
+        VwL1kF64ubhoWaGivbKUwoIDqTxvGr115rCUIV5A22ZtWLOuaIqp0tYcnV9Em0uzydXJEdPhS753JNOn
+        dDC0vKHa0GkwJz+HEALjOpRWqfC2Ja1SFh3kSy1Z46g5M5mSwgKlDMpat1N/f4HmxREqv37qoJTvWrVE
+        yuKGB1BHSbYp23lqIf43U9iacwvL6cn6mVSYrAVLm5k+5U1GwlnrjoN3nu2ksryp0iD+ogxvD8mRHzs9
+        zP2tPPRGBfhInecPPN6rDfDrSyepZlae1JmVNUnKsIS6ODmRj7uLqUKD4amGAuoozlIG6FfG+Ces6yrT
+        w7CflpZi6DwiPCQ6AfpEJzBARscPyqfRltIs8ehIUrA1husYCZOSkwwZI5Ipd1dXQZUhfOY+0Nl2ozNs
+        mDKWJo0O7xeTY8Jpw+xMue9wYyGnzDPViPuzaNiHfArlVEcTokZKh147+ZTWSTMDwJObGeA3XWfkekqC
+        xVnePPKEdg+Mg6VVb4BRI0Il9MXw1RsAyxzu7y9wmGKA+WyAunw2QP9TZpkCynG1VZZIgznpqeL1f8XD
+        vSzXagpcOE72bOE7TYGl9ZXye0rKWHF8SJerbzMFYDy98uBUa4nE/v3h8eo8utDjJyxTIFOew7zB9Cni
+        BNFh1anRPbE8UE4wJMBfc4JYy1GGt1QwJppmJkVRhL8l0IEBUQfhsRpN+nYwipQTxM4yynISRvYywGBA
+        TAEnqMsYH2b6lJFYMjha6371uGXLCw6ruWy27OhgqYLzUjvBMEJQT0BkBpZB5VAxdWAQDHMsg1hV3j57
+        RK4hFkAZhv+28hxThQYKlsFHeDq6WJbB/3B/Ipl+CZYLefM/PvGkdNAMdD45zmLdRF72ysbHaZSmxNL4
+        nigwMjSEAyFjLKAHxpyQGC91p8ZHmiozUBAIIQZAmIx2mU1MvwVh40WGvDzcuyUU1jlBKI4NDqzhqDMq
+        0Ie28sP0YTDYzMtPYliA1EH8j2mlNyh8yqYHmrVAKiE0kM60lZoqNBB+WDuD7k+JITd+82iXucD0OxQO
+        YdYzLzOqAQFKeHv29sZ3SoZ8TZIhDzcuN0mqrJOhSHaku2tmiFJYFmEg/XU9lmTIXaI+63YZ6AKdgpnb
+        ij2zkcFcMWtkyHF3ce7e21j871c6Wv91be38zwI83b82q9dfevwADAFdDYLhgWFCrvxQzgNkQwN7+eDK
+        3seoqbRIDj9RB17aLBxF2faKaeTvaTkYhdNEmIzpg21yOLrDm9ZS5vhkuY6Aa0ddoenmx73i+oYm2jev
+        iIpT4sjl/wer5xjDlNjOiLO6XQgMbhzcrSUsOJGxNsAhDjrC/CzLX8n0LC0IMmP70naJHdw4ZW3KSaMF
+        uRMHBfYKu9b0feh6fU0j7a2bqc8OtbwAOz5fYdmzTlmxpZWWlEBwgiqkffHwExK9OXHsf6ixSFMea25Z
+        apw0jjeMN67awZtHGYKpY1vWa+XrWxpUZ+4KnBKZKW1N1/K5tK++QIzO0+G/fK9kh7ukkXk1WscUk8dp
+        5240JiZaghmUL6opl7KKtATNAMeaZ4vjQ4BjPYqwMQoHqtpaVl8l5TCSCrIqJyXTiqLsAYNjtesbmk0V
+        tubmxmbpa83EJNUXbJvZfYAfPzlpicb0IB/AsMdWN+pAcZQjTMZvpK3KAFvLLOExtsSt2wHwJUceWSve
+        H4kJfAzKYXjc1z4jo1eHL62aJwepCv3u8MUV9YZrd+JQa4W2IXvpwSo6yAkSnsm8x9h9jqVNdRTD3jqH
+        h3FwA77+wG8YBtMAb1stQ949y506CUJ+kJWaTJ3bHzK0pYa9CrVhFPzG+aBSDrzIHfZ0tThdRYivl1zD
+        VrkTO1D9tb7AWaLcy9MAL8zDRbbLcJ5g94V1VufAjatDDYAECJkdnKQq83LXvtAw0FBcINfP79oiv/Mn
+        p2v3ADg/lMPQ+H186wb5XTzBaABQlzVe+6ACLOk5HMFZIk6Y9NfuxLTEaNrVc7LUtbxWDNDzwr5g7D7B
+        m8QbQ4eKcyybB9i1wWkPcnaVtVXmT5c6yObwO9zfW/bnwKqCDCnLnjBO6iCJ4iiSHHnpUaMAy6HK91UZ
+        Nlfx+24+lhgIl5dW0wnuL3IOfu5HjN1hdODRZe3SoTdOH9KiNDgufOSA/zFKVOKyaaGl04i+1GZlZmyE
+        lCGdVfuFO1dYsjuAHWS1DVbYk/4CrDIoW186nUp4GhSlJgwYjIbORdWmCut5iacV3n5bTqrq10HGbiLT
+        HRYUKEMdncLWNYauKwc+rpzNFWRmaCkrlrQ7ZX8AI0YpeOSRdfLtAEYZYn5sjWNk4dpTD6+W+pGBvlSS
+        rnnmQTFvaqqp0nquraqX0RpgCdTwlVkaI4LISJY97PmpzluDvT+1fZ0RPYJW8rDXs2BaCnmxc8R1ODuz
+        NhQ4RlN+5PH6IglmNlflU8ecvAGzvaaAbmxoMVVagdPkk62llDRC23nG532a4CvNdxlxdHvWLdPWfIAl
+        bPfqJRQeYklvY4L96bRJ1oaPFVbkp2shZ15GmoTResUxkrDKOPckLS253/zcv7p6Hi2fmSGrFZ7J4JjP
+        gzGIF3OJkUrYyMA3flj6MBVUOQjj5Sg6yM+UqCBf8nQx1of/SIweJQbEaqLK8bWI2fcA9wr5uJIzSl0O
+        AJDmW3+Wa5AcBonRPxj9jd9ncKh7npnKDEjcGesPlr9vQAeb2MQmNrGJTWxiE5sYxc7uf2bvlbFr58RA
+        AAAAAElFTkSuQmCC
 </value>
   </data>
 </root>
