--- a/FormularioCarpinteria/FormDatosInsumo.resx
+++ b/FormularioCarpinteria/FormDatosInsumo.resx
@@ -147,45 +147,45 @@
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
   <data name="pictureBox1.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAAEAAAABACAYAAACqaXHeAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAAAboAAAG6AeirAQYAAAAZdEVYdFNvZnR3YXJlAHd3dy5pbmtzY2FwZS5vcmeb7jwa
-        AAAIaUlEQVR4Xu2aaWwVVRTHKYW2dAMKbWmRQi1bV5ZC0bK1lBZQltKWLiAIsojsm7yypSWVNQXBqGzF
-        urAZEDHxAyqxKCTGCIYYI2hciChRWaKoH8TleM7t3OHMvPs68/rKo0BP8kvnnXvOuff8+97MvDuvGQDY
-        Aq0EuYHQi/pyUFVbgvY68p8WK7mEjED6Id9qPituImeR3cgsJFw1H6F0qkA7gfBJ6kugi/rtWYyZqwgJ
-        oRqzwxWkQDmvyqkC7SQV69y2LZTl5MDCwYP1CcaNGwdlZWWCKVOm6P7HUlNFbEJkpPRdVdUm0DpoMdCz
-        ZyJkZY2EtLR0mafTrVsPMVYXmZnZEB+fBCEhoeb8A0iAYV7+oi7QhABD4+IAKivhu5Ur9cLV1dUYUmt0
-        LP3nly8XsWkxMdL3AYa4qq8LkJtbCBs2bBfk5IyGsLB20KZNGPTt2x/KyzfrY3aYOvVJCA1tLecnKg3z
-        8hd1gWZLAIfDIXwtmjeHm5s2idgQf38ZuwNDXNVXCtAQlJVthNjYrnIN/yKD9Hn5IuoCzaUA/COQlJQk
-        fN3D8byDcd+vXq3HIfNUtQm02yYA4XCUg79/gFzH14iPmNe8EFegGQS4tGaNLKZkbGKiiDs+cyb3D1PV
-        JtBuqwDEmDF5fC3dxbzmhbgCzSAAkZ+SwgvqtAsMhHdmzRIxW8eO5WORqtoEmlKAGTPmQu/eqZCS0gcy
-        MoZDRUWloSnO3LlLxTlDngxHj86DmTPnw/r128T40qWr+FominnNC3EFmpMAdpgxYICc8JqqrgRNFyA9
-        fQhMmzYbCgomgo+Pj8wX5OeXODXucJSJEyWP40RHPwCLF68QQgQEtJL+rWJe80JcgVYvAdK7dJETnlLV
-        laBFanEq6MbmbzoeOHCoofl1656FmBh9DpfQJbG0dC1ERXWUvjfFvOaFuAKtXgK0baUrvlNVV4LWHPlK
-        i+VQ44sRurMDPz8/cUmUmK716xF/VrMb8iIixumdxQQ4JmJksBVoQoCWvr4QGRJiG20yYoGipi9SiRxF
-        ohB/JA15iNFZiz2M8HoqWivm8EEu0HhzvDQTdIzUTwAPyFLUnMfGj5jHOWiHKC44OEScJCUJCckynzDc
-        5bHcBSxGIt6RTsGuQBMChIdHQlHRZFskJhquElGmeu2Q69qYJJPHcNCEALGxcXD+/GWdJUtu3Y8grgQI
-        RFYgOzXooyLWQ9YVWYaUMroqiggB+vd/2LCAusjLK5ILu66op382kX+0v58hvuZYLb7eAhBo1CfvkXom
-        n/Ir5m9IgqmA2wKkpPSV9U6baqUgsmn6lrlGOybm8liW48k7IAGhnngsQb07OSXlpiJuCxAUFCxr7TLV
-        qtH8dIanxQUg32i+a0gYj9dyPBGgnMWYqT1YnpsE114uht5dwuTAGVMRtwSoqTkj6xALWZ0JzP88Qs0T
-        hZqPeIHPreV5IsAZGqfeqEfqVYsXg+JgZV4y/Ll/EqzAv5qPdmaiWRG3BNi9e7+sQ2RrNehaf1Hz1QV9
-        PMS9Opu/XgKgRSNil6l0fG2P1Cu91qg9kAJ8WDGSDz6DZGicI59dAej2lOI1ihCqwf/LVtCZWs5NvI9Y
-        CZCD8ByCehDjJ9eOsBbgj32TIKK1/rXRCbsC5OcXK/Mlj/TuAI4x3Q3MHh6rjOV06tQZTpz4WGf69DnK
-        ODPtQ/3h930TrQUgJg+N4wEG7ArQq1eqMl9SOSkZLj430sDp8qHK2IagZFCs3p+lAPsW3trvQ+gGgt5K
-        bn0E6I5Nyz+i5RPFms+OABsRmbdH81lBG6cyh6C1i7FX5g+yL8BPVYV4z6/fM2/RTia2T4I1NWdlLqFf
-        19G6SL8NAaayvI/I1zGsFZQXxItczrDEcJ7Xg+VtJV8LXx+4vGeCfQGIwfH6Tu4FrZhtAaqqDspcIoMt
-        yG0B0MKlb21BglMO8fnm4TxvGZvvS/IN7BFh6M2WAOtK+vAgumW0LUBpaTnPjfBQgDpzJDIGETdwaLRm
-        4aso7mPozZYAZzeP5kELEdsC0E6OlndFNn8HBKA1C98nmx419GZLACKmfZAMehexLQDt4Wl5hucAaN4U
-        4D163aldkFNftgWYld1dBv2FiNtJOwKwXRrDcwA0rwiABCO0ZpiR1c2pL9sCvLEsgwfSAwVLAU6e/JTn
-        GJ4DoHlLgPHy9RHswdyXbQGuVhdDQEtfHmwpwN69h3i84TkAmrcEqKJjWvuV6iKnvmwLQOT0iubBYouZ
-        9t9dQQ8mWfx2hBYk2YaIsezkCFg0qquBJzI689xjiGWORMYgdK76RcTj2lU9uSXAlsf78eC7Clq7qie3
-        BPh5bxEUplvvuzc2aM20dlVPbglwL9IkQJMATQLULcD8UT0hNiJYfB/giXcj1AP1Qj1Jn6UAlEC+qqfS
-        dd/dCvVAvVBP0mcpAKlGib++WqL77laoB+qFv5stBbjXsRSAvgO8vSILji3PdIu3HMPg4o58w2SNEUsB
-        Uh90/XMTKwL9WsCPu2/tvzVGLAVg+4Fu0ybID29BCw0TNjYsBbjx2kQ4VTESataOcAt68tLYmycsBbiT
-        /LBrAmyblgZfbMs1+I8+nSnW2BAMjo9ovALIbThapPSdqxzDF9zQ1B40FgEOLBoC4aEBhq1suip5cmK2
-        oPagsQjgDajXJgHcEeD46mxYlZ8iYjyBashn9HcSWottAS7tKuAPSj0myL+F+Eyr5vIWbglAP5jISo7i
-        CR6RmxajnMebuCXAvUiTAFYCeHs/QPWdnW7HX5ozUKyrobG8E/T2jhDNQ/PxXZvDSw3PJW8ntQdcAG/v
-        CdI8NB/ftzu/PRfiIg0/t79d1B5wAe51qNcmAcwC0ImBBu4HzCdB+bP1+xHqXfyW7n4UAXtutvV/l2NS
-        hLY0jxoAAAAASUVORK5CYII=
+        iVBORw0KGgoAAAANSUhEUgAAAEAAAABACAYAAACqaXHeAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAB
+        ugAAAboB6KsBBgAAABl0RVh0U29mdHdhcmUAd3d3Lmlua3NjYXBlLm9yZ5vuPBoAAAhpSURBVHhe7Zpp
+        bBVVFMcphbZ0AwptaZFCLVtXlkLRsrWUFlCW0pYuIAiyiOybvLKlJZU1BcGobMW6sBkQMfEDKrEoJMYI
+        hhgjaFyIKFFZoqgfxOV4zu3c4cy8+zrz+sqjQE/yS+ede8659/z73sy8O68ZANgCrQS5gdCL+nJQVVuC
+        9jrynxYruYSMQPoh32o+K24iZ5HdyCwkXDUfoXSqQDuB8EnqS6CL+u1ZjJmrCAmhGrPDFaRAOa/KqQLt
+        JBXr3LYtlOXkwMLBg/UJxo0bB2VlZYIpU6bo/sdSU0VsQmSk9F1V1SbQOmgx0LNnImRljYS0tHSZp9Ot
+        Ww8xVheZmdkQH58EISGh5vwDSIBhXv6iLtCEAEPj4gAqK+G7lSv1wtXV1RhSa3Qs/eeXLxexaTEx0vcB
+        hriqrwuQm1sIGzZsF+TkjIawsHbQpk0Y9O3bH8rLN+tjdpg69UkIDW0t5ycqDfPyF3WBZksAh8MhfC2a
+        N4ebmzaJ2BB/fxm7A0Nc1VcK0BCUlW2E2Niucg3/IoP0efki6gLNpQD8I5CUlCR83cPxvINx369ercch
+        81S1CbTbJgDhcJSDv3+AXMfXiI+Y17wQV6AZBLi0Zo0spmRsYqKIOz5zJvcPU9Um0G6rAMSYMXl8Ld3F
+        vOaFuALNIACRn5LCC+q0CwyEd2bNEjFbx47lY5Gq2gSaUoAZM+ZC796pkJLSBzIyhkNFRaWhKc7cuUvF
+        OUOeDEePzoOZM+fD+vXbxPjSpav4WiaKec0LcQWakwB2mDFggJzwmqquBE0XID19CEybNhsKCiaCj4+P
+        zBfk55c4Ne5wlIkTJY/jREc/AIsXrxBCBAS0kv6tYl7zQlyBVi8B0rt0kROeUtWVoEVqcSroxuZvOh44
+        cKih+XXrnoWYGH0Ol9AlsbR0LURFdZS+N8W85oW4Aq1eArRtpSu+U1VXgtYc+UqL5VDjixG6swM/Pz9x
+        SZSYrvXrEX9WsxvyIiLG6Z3FBDgmYmSwFWhCgJa+vhAZEmIbbTJigaKmL1KJHEWiEH8kDXmI0VmLPYzw
+        eipaK+bwQS7QeHO8NBN0jNRPAA/IUtScx8aPmMc5aIcoLjg4RJwkJQkJyTKfMNzlsdwFLEYi3pFOwa5A
+        EwKEh0dCUdFkWyQmGq4SUaZ67ZDr2pgkk8dw0IQAsbFxcP78ZZ0lS27djyCuBAhEViA7NeijItZD1hVZ
+        hpQyuiqKCAH693/YsIC6yMsrkgu7rqinfzaRf7S/nyG+5lgtvt4CEGjUJ++Reiaf8ivmb0iCqYDbAqSk
+        9JX1TptqpSCyafqWuUY7JubyWJbjyTsgAaGeeCxBvTs5JeWmIm4LEBQULGvtMtWq0fx0hqfFBSDfaL5r
+        SBiP13I8EaCcxZipPViemwTXXi6G3l3C5MAZUxG3BKipOSPrEAtZnQnM/zxCzROFmo94gc+t5XkiwBka
+        p96oR+pVixeD4mBlXjL8uX8SrMC/mo92ZqJZEbcE2L17v6xDZGs16Fp/UfPVBX08xL06m79eAqBFI2KX
+        qXR8bY/UK73WqD2QAnxYMZIPPoNkaJwjn10B6PaU4jWKEKrB/8tW0Jlazk28j1gJkIPwHIJ6EOMn146w
+        FuCPfZMgorX+tdEJuwLk5xcr8yWP9O4AjjHdDcweHquM5XTq1BlOnPhYZ/r0Oco4M+1D/eH3fROtBSAm
+        D43jAQbsCtCrV6oyX1I5KRkuPjfSwOnyocrYhqBkUKzen6UA+xbe2u9D6AaC3kpufQTojk3LP6LlE8Wa
+        z44AGxGZt0fzWUEbpzKHoLWLsVfmD7IvwE9VhXjPr98zb9FOJrZPgjU1Z2UuoV/X0bpIvw0BprK8j8jX
+        MawVlBfEi1zOsMRwnteD5W0lXwtfH7i8Z4J9AYjB8fpO7gWtmG0BqqoOylwigy3IbQHQwqVvbUGCUw7x
+        +ebhPG8Zm+9L8g3sEWHozZYA60r68CC6ZbQtQGlpOc+N8FCAOnMkMgYRN3BotGbhqyjuY+jNlgBnN4/m
+        QQsR2wLQTo6Wd0U2fwcEoDUL3yebHjX0ZksAIqZ9kAx6F7EtAO3haXmG5wBo3hTgPXrdqV2QU1+2BZiV
+        3V0G/YWI20k7ArBdGsNzADSvCIAEI7RmmJHVzakv2wK8sSyDB9IDBUsBTp78lOcYngOgeUuA8fL1EezB
+        3JdtAa5WF0NAS18ebCnA3r2HeLzhOQCatwSoomNa+5XqIqe+bAtA5PSK5sFii5n2311BDyZZ/HaEFiTZ
+        hoix7OQIWDSqq4EnMjrz3GOIZY5ExiB0rvpFxOPaVT25JcCWx/vx4LsKWruqJ7cE+HlvERSmW++7NzZo
+        zbR2VU9uCXAv0iRAkwBNAtQtwPxRPSE2Ilh8H+CJdyPUA/VCPUmfpQCUQL6qp9J1390K9UC9UE/SZykA
+        qUaJv75aovvuVqgH6oW/my0FuNexFIC+A7y9IguOLc90i7ccw+DijnzDZI0RSwFSH3T9cxMrAv1awI+7
+        b+2/NUYsBWD7gW7TJsgPb0ELDRM2NiwFuPHaRDhVMRJq1o5wC3ry0tibJywFuJP8sGsCbJuWBl9syzX4
+        jz6dKdbYEAyOj2i8AshtOFqk9J2rHMMX3NDUHjQWAQ4sGgLhoQGGrWy6KnlyYrag9qCxCOANqNcmAdwR
+        4PjqbFiVnyJiPIFqyGf0dxJai20BLu0q4A9KPSbIv4X4TKvm8hZuCUA/mMhKjuIJHpGbFqOcx5u4JcC9
+        SJMAVgJ4ez9A9Z2dbsdfmjNQrKuhsbwT9PaOEM1D8/Fdm8NLDc8lbye1B1wAb+8J0jw0H9+3O789F+Ii
+        DT+3v13UHnAB7nWo1yYBzALQiYEG7gfMJ0H5s/X7Eepd/JbufhQBe2629X+XY1KEtjSPGgAAAABJRU5E
+        rkJggg==
 </value>
   </data>
   <metadata name="$this.Locked" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
