--- a/FormularioCarpinteria/FormDatosModelo.resx
+++ b/FormularioCarpinteria/FormDatosModelo.resx
@@ -117,25 +117,28 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <metadata name="CodCLiente.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+  <metadata name="CodModelo.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
   </metadata>
-  <metadata name="NombreCliente.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+  <metadata name="DesModelo.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
   </metadata>
-  <metadata name="RazonSocialCliente.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+  <metadata name="CodTipoMadera.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
   </metadata>
-  <metadata name="dirCliente.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+  <metadata name="ColorModelo.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
   </metadata>
-  <metadata name="FechaRegCliente.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+  <metadata name="PrecioVentaPU.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
   </metadata>
-  <metadata name="telefono.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+  <metadata name="PrecioVentaPM.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
   </metadata>
-  <metadata name="EstadoCliente.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+  <metadata name="CodTipoMueble.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="EstadoModelo.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
   </metadata>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
@@ -143,68 +146,34 @@
     <value>
         iVBORw0KGgoAAAANSUhEUgAAAEAAAABACAYAAACqaXHeAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
         YQUAAAAJcEhZcwAAAdcAAAHXAYySCGgAAAAZdEVYdFNvZnR3YXJlAHd3dy5pbmtzY2FwZS5vcmeb7jwa
-        AAANpklEQVR4Xu2bC1RWVRaA5fH/vF8mogg+eIlCCuJbNFEERUEQQRRFQAkU1BRfjaaWj8qZdJzRUtO0
-        Mq00H2mlZT5qjZWZTla2rJlWtay0ZqqZscbKcc/e+/7neO/97/0fwGpRM3utb3n2Pufse/a55+577vmx
-        xa9AAmz8z0gPZCVyFvkXAjao/BayAklFfnWSjBxCRMBMgJ+F0duRg0gS8quQKuRHBEKCfGBmWSoc3V4I
-        /zhbC9ffv4P59q1atlFdSKBVTMIPyFTkFy20pDmg6RO6w5XXamTQZlCbaeO7i0kgliO/SKlAwGrxhEfv
-        H24YrCO235/NfckHMpkcNrVQ9g2zYSFDE0occg2BrauyDAN0hYdXDBMTQL5ikEbLAORp5AoinAu+QHYh
-        RYgX0hh5CoGKwiTDwNyhLL+rGB+NrcHijaxHZMDeFgv4+Pgynp5yqQneRYYiDRG6+zf8Mbt/erLKMCh3
-        +OTEVPD39aYx3UAavAp2IuDl7Q1pfdJhQkUtVM1YqKGkrAb6DcqE4JAwMQnXkXmIu1KP8J2jAL56Yxoj
-        AnKmG9kn5nURY5pNF3BXShCw+vhA/rhyu8D1TKmdD2l9B4KHh4e46B3kxA15CYHdfxjFg6cyQWVaEUL/
-        68uVbItsHaDRBep+T/1+pNCPIC7LrQg9i/9G4LbMkYYBmzEkO09clFZCOuKqfIjAxSMVdoEsvL2X1KlM
-        tvzMOI0uUPd7/3C50D9AXJKZyE8I38l20R0Ng3RGSs9+4sKnEQ/EFfkOgX+eq9MEQpscD48WmG88wBPH
-        RP/OmJQCG+/J5Hqhn94zgZe+6Ec+aNNk068iTmUKwh2Su/eE0so6w+BcoWLaXAgIDBIXz0RcEW6vv5OE
-        FybbB34zHdYsqgVvLy9NnRkGfhxKNEKzhEs+B8pux9cIIgJyphvZe/ROFxfegLgi3F4/8KIRg+H4zrXw
-        7Z8PMSd3rYOS3CHQuVM0hAYH2mHmB3Eo9yIQE5/Ig6cyQWVaCUIfXz6Nbf4ByoWELlD3yy+eLPS3EVeE
-        2+sHLgJ3FTM/iEM5j0BuYaldIKrnmctk6xiboNEF6n6TqmYJ/W+IK8LtzSbgyzf3M+pgjexmfhCHwgmo
-        oqZeEwjlAvpXJCBKjGQbOGQ424VegK9JWvqiH/mYMn2e0Cmpiq2zGYEItzebgIROUbzshW5mN/ODOBTa
-        LdndSaIhCahwwhTo3LWbYZ0zTj1VYjgBo4cNgIKsgVI3s4t+7k7AVwjv9CiDU5loaAJS4427SLF1NoPa
-        qPuUj0mSZXFtVxH93J2AkwiEhLZUdzC8gBmX39gr+9H3AuWHcWXVclU5o3hSNffRT4bRtdR8/MqTjNBF
-        P3cnYD7CDS2WmwMQTl1JQFXjRnGfwKBgGFs61TBIV6C+AYHBdmMgRLCCbasXcJv2kRGyjejn7gTQWRqM
-        G5mhuZPCqbME9PreBzlJemGOoOffKDB3KBxfiYlXyTendq+X1xPj0rNsVjnXf3RiF+t0hObuBHyLwF+O
-        P6G5kLiwswRUM0HZ/9MbQR2IfsPkTFeT1C2NfVaPz5XX0+eclK5xcP+Cavj67EGu37h8DvcZ1CvK7Qn4
-        GoGzBx9mR1QmxIWdkRjTntvT5kcdhL+/8sUmcoGPr69Gt2ICVOtqRheVcV3rW0LhvcPbDa+rhtq0CVdy
-        2CP33jxNIt2GQ9mBQK9uiXD08QdkJ/1Fvjqz3+45JHuAvxJIefUcGUBmTgFYrMpJbUKXW9nWKS5Ro8fE
-        K9/rQlczuXo21xHhLUNg9cIaeGPfQ3bXP71vI9eF40RR28F9ouGHd2e5PQFRyCeIuoMM/LNTe/j1Z1Ul
-        SHWb4EDlTtOgafDZuUV27SjYjKw8zBOKD9IzRxRodLrr4pFQT4CrZKV3gL+f1h6SqOqdSiiyDnkf+Q8i
-        73Bl0Qh2QhOgfw6pPimhI9cXlCgHJ+ERbVlfMmMy7FizCPx8fcQgICdv7FV81fHGi8gbU3LVYrFKnSAf
-        5IvK8R1CYekMZTvu62OV17XYXpdtwwOgYFgcPLM+F366cDPwhkyAWp5HYNPKeg4wrkM7vuib+zeyrodW
-        B7WnozHaAtPbgPQrp/dxPeWWirEjOFcIffKYbPlmefu5rVBTKg9S2Af5ovKk0V2gNE95dOqnFstrUpls
-        VKcPWo3wibglpQhERrSCd154RF7UDNomU3ur1QdfXzcPSo3aOkL0Ix/ki8riJzDan4gkTbz17Ga5Z+kS
-        21L+cqRfBcIn4pbQKc4LCD/f982/nZONPgHR1vie2RUQFOAvL6TOE2KwrmykCCMfRLs2rWDPhrs1fYkn
-        1i6GiFbyMJbpGncL7NuQ1+gJIAlG9iNqJw5p6EZK6KIf+SjOGSz1/GHpmn5qaC9Cbdr06QZ+rW9u5Quz
-        4+GbM9OljjRIaCXkIPytQIlHn4SQ1xBOmg3dSAld3e/DYzuk7u3tBc9vvU+2Exzaci/XeSIFR7fChPP7
-        oNeiarAEKisyOaGV9IE0SuhYyzAJ2eo+p3JDN1ICdb8zBzZJnQjw84XFdZPglSfXMYtqJ4K/n5InkqYU
-        wsQLByX5L26BkNhoTX/ELfFE6M5vQS4g/Jp6eccaOVgqk80GHYE73UjpEblE6KIf+SBfVI4rymZEnZ7Y
-        McOg9J0Dmgkgil/bCcExUeq2Lgu9AS4i6s6MyQowRbQl1MmTcPQlJwhq3xbGvvo4B5S5bSV0GJ7OQQV3
-        bAftswbA0C3L7QJXM/rIZvC27VKRYYhDCUcOINzBGqxk197d2sCrO8fxsZgVv/NpaRJUJtvJHcXchtp6
-        B8ijcMbo7urRf8l5oM+wxBjoUp4PRX96wjAwd0ibVymuRb9RmEokQksdLEEhkLpgLQw/cAEH48U/MH5/
-        fgZMGZvMjob278FQmWxU5+fjzW2z956HrjV3gcU2EZtXzZUTIJKnwOxLLnJgmmEgrlL8+i5G6OPPPQM+
-        YfJ8wfDviEIQXvIhccmQtfssjD55hQntnMIdjz9eBJdPVUPLELmcIAzLZDv22FjWQxNTZL+0xQ+yjTZS
-        7x7eJifBDPWXXPpv52kCchcxPrUtsWy0sNMfWtkJ/X6OwSdBzqGLMggifsIM7ki7LPp7nFEZMfICVCYb
-        /SxFevzEWbJf3vHPITxtINtDgsw3Uvovucj0HjDxvWc1g3cXMT61LePBJcJ+DNFILkLP7o3MXac1wRO3
-        bX6RO9KdD2/pJ50LwsP8ICxYWRWDtxzV9M157gOI6Kvs510hKqM3lJzZrRl4QxD+1LYxx7YJ+2eIRl5H
-        ILluuWbwakISbh5v9++VAEeevpOhsrDTo2LUd/SJy9Bn5aPg30Z5J/vju1zkACqTLTAqAoZsXtboOy8Q
-        Y1LbKA/Y7PQnM1L6IJggwiH36CXjAJDuc1Zz58T4SLhxZSfAl7sYKpON6rrP/Z1dvxEHL/LEtuqRjjs1
-        Zdd4ePtq+dxTmWy0i6Ol3/fuOig6tVMz8IZAPgkzOyJlKQKxxTWagVMeUOeCUUc+Bt9Wymtu36P1cgL2
-        bleytm+rttxGtB95+COIH18H3n7KIYmaEYP7wDfnDjJU1tdbAvyg+8yJUHJ2j10AriJ8mdkRKby/73vf
-        Djl4gmyE2kZ3mGx0x69deozpHKfc/ZR5a2S79D8ekMsdPyLA3/ZVtz4jBcJ8leOxlfVTGSqTjeqo7Kf6
-        AgxoGw45u9faBeEKwoeZHZHyEQJZe85pgiUbobblHfsMAtvHs33xnAKGykEdEzjjU5ueSzaBp0UJsle7
-        CDhVVQSl3Tqzvj0rDfaN6suTQh8vBJXJRnXUhtpSn57tWrPu7Wu9MXDNArtAnEF9CTM7IoV/EM196VNN
-        sGQj1DZi4IZD4OGlDJ4DwPKgh57nut4rtoOHh3IQMrt/Kvy4tA7gnpkwd4CyYVo1IAmuzyyAmSmx0j+V
-        yUZ1pFNb6vPD0lqY1U9ZFR6enjBkEyZIXTCOEP7N7IgUNugDNbMTnSfXy/rO5XPZlrHtBHj5KK/IFUP7
-        cRCCNcOVvQAFe60uHzKiwmV/KpNNTAq1VfddlqHkCMoL9DiIHZ4zhH8zOyKFDfogzewEPQotk3sxVKbl
-        H9YlldtXpHbVBEDsKlJ+Ri+Kbwd3pCp/1KSGbFRHZWqr71+WIv/MrSmRwgZ9kGZ2QfYzbzNUTl24jtt2
-        DA2G7+6abhfAycpCrg+xKud6Vq+b54WiLOqorb7/1cXToEOo/MCivwKnH3AaixR2rA/QzG4HbnIoCVJb
-        o7tHfDBL+XVHsNF2eqwvE9TWyMeOsfIsgI7r6YSqyYQd6wMzs+sZtPEwt4vCXd31ZTMMB093UPirSktm
-        m9CpTDahU1t1X8FPy+ogEr8nbO36I00m7FRsfARmdj3iQ2l+eppmwF/fiZ+4iNCDfazQL7otXFtSy7rw
-        T2Wy9Y1uw21Ee31/ot72NkFWIU0mcjCN4bmJeZrBCrvQB3eKgktzK03rv5g/FTJjo03riWdLc4X9KNJk
-        YpQg3IHPCT+pr9AMlmyE0K8sqHJYT1zGSXBU//GcCmG/hDQb4f/Po8/+ZCPUNjUNqVflku+RZiOGgZjZ
-        BWF+PoxRHeHML9JsxOFA9XZXceYXaTbicKB6u6s484s0G3E4UL3dVZz5RZqN8IDEe1tgZncVZ36RZiPq
-        Qf2cNBsx2hv8HPxfGictWvwXmKUJ6HZFHcUAAAAASUVORK5CYII=
+        AAAGQklEQVR4Xu2ba2wUVRTHO7MPWLpbS7vFvltaWqW1LaXd7mrLQ2gRaKXYSnmj0NpAS6mAUjVRAa0t
+        CJGUQEReUsAgIcQYAxVMNBhBDMZP+N0v+k3URBOg3eM5t51lu5ztLt2d2d1kT/LLPO/M//znztx7Z2dj
+        NIozyK9hyACifuhkachiMkBWkjlsiI81Akoj1A8y4LkZaXBu69ywYVVVTtQAlBY1YFghHwbkMHLeD84h
+        lQgbkWpAOQKpaWmDObm5Y2I0Godw31OiFBNkQH5KnDhpuDAjO8GnASsROHHqUxj45sqYlNvKnZJOd2O4
+        2MOBBtzFiXLCsEGWJJp6jXd0Op3zq4FLbNLu1C9dCrjvnyPlHgo04I96RzZcfb8uID7pmCOEd6+rYLc/
+        Ci0LpitGeI3TySkp97mEPdm0uU052GRR0iMi0gCs0j9V2CucXMKedPd+oBzMJgp7REQaIMvyXw2NDWzC
+        npw8fUo52CpR2CMi0YBEBDZ3drAJe3LpygDo9XpqCXaK0h4RiQY4EOjZ28smzJGalnofy5wVpT0iEg1Y
+        i0D/Z2fYZDnsDge1BLeGi4+OSDRgNwIvNi2DphXL/SJ32jTA58Y/w8VHRyQa0IzJ3JF18t+exEgxQ5Is
+        /cdtwxrAdoYi0QBvQeMDKrRdLPkZUQOiBozPgNcbZwiUZc6A/m3zYM2zefB5V41rnT9EhAGluVaBsswZ
+        sGe9Q6w73DbLtc4fogZEDYgaEP4G1NoyBcoyZ8DBjVWQkxwHxzvnutb5Q0QY4AlnwHiJGhA1YGwD4pFq
+        ZJkHKxAq1O+2zieyJN2x5SXB2yvKWHatLoeP22fDlfd4sQpaGEBXeL8kSfdwquygGZlTLHCgtZIVTGhh
+        wDEEFtfVwp59H4pXXVpw5NhR2PFGF6QkPw4TDDo4iolyotU2IBNxrly9in3hoQXnL16AOIsFakrTWdFq
+        G0D3PHzUd4AVpxV2hx2ezEhgRattQBkC3b09rDCtKCouAlveFFa02gZMQWDra9tZYVpBz4FF5Q96f+6o
+        bQA+/KV7a9atZYVpweWrX4PBoIe18/JZ0WobEKPT6X5buHgRK04Lzl04L0Rte6GYFa26AVgDrtEvvZw4
+        LTh4+JAQ1fOSnRWtugEYZ9Mz0v36QVQN3t29U4g6uiU0/QCKPSaTaZATpwVtm9uFqCU4bmiszHmIauwf
+        0PbKgmR2+6NQlMV/INGBwMUvv2AFqg39wCLLsiJMdSQpxolTV8hIDwKFhYVQOnOm5iRarWA2GWFH/VPQ
+        t8GuKkuwqaVcKXGKVGwBbuIUDEaD04Ld0bjH4jTHbDaD0WCgKwMLStLgbOcc9gOnYEDfCVG+lPwkrHa3
+        zRbzYO/+vfDDrR/h+s83Q8a3169By8ZWNEGCGjSBjBiLnU2lbIK+cDegi0524FAfKyhUvLKJTIiBuElG
+        SDBP8Er7wulsgr5wGaDX628/U1Xp5ESEku9ufA+xk0xQV5bBJhAoLgMkWbpLVY4TEWqKcWBUlpPIJhAo
+        7rcAtHW0swJCja3CBkWZk9kEAuVBDZCk+82tLayAUENDY/qik0sgUFwGYPN3DZufobr656G+YWnYUL2g
+        RrQEK1Eol0CguN8C/XQiHIY6sQ32hWinR+C2e2O4jNF/aFhMAl+tLWQTCBSXAbIk/VtXkcUOGELJ5V21
+        kG6NFU2dIz8p6GTisZUaIEZGnIhQMzPXimMDCSYadc5gY9DLop8R9gao3gpEDQhzAwrS4+F4W5VXzmyZ
+        zSboC3cDnOurn2AFhJriqYmKSK9smJfHJugLlwF6WfrFGjdx8GU0gWpCuLB8di6gNijBjlDz/Hyv7Ftn
+        YxP0hXsNKCITcEpvR1zOhhq9TgZ7XhKcbJ/FJhAo7gYoMRWBztoCsQO9jMDmYhDX9YmtwzHu7wO8/Wts
+        y+ICIaRndZlYPtTytFjuWDS+Ya6/+DTgzYZiZYf5tHEkgm4AXWEDXu1GR7ZYDhsDakpS6V9V9PU3Ja1E
+        0A0gSrISsGdmFvOhNCADUVYq0L++KZoQekYozwllnjAjYwYa8LvFZBjKsprvcWB3l261Uee2WiYOcvsG
+        i/hYo3LOUdGMdI2wA8lGKKYjb3nBiPiKVuTIGBxHriP0Ypag+RMIt28Qien6H3qvmCeq2AE8AAAAAElF
+        TkSuQmCC
 </value>
   </data>
-  <metadata name="$this.Locked" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>True</value>
-  </metadata>
 </root>
